@@ -1,5 +1,4 @@
 // PR c++/60347
-// { dg-options "-fno-use-all-virtuals" }
 
 struct A;
 
